# PFP-IA-Engineering

./: .dockerignore  .gitignore  README.md  data.dvc  dataset_info.csv.dvc  dvc.yaml  pyproject.toml  yolo_hyperparameter_optimization.db
.dvc/: config
runs/detect/train/: args.yaml
runs/detect/train2/: args.yaml
runs/mlflow/0/: meta.yaml
runs/mlflow/222773775549711198/: meta.yaml
runs/mlflow/222773775549711198/0a4f117ad0ab4ce894f707dab55fed22/: meta.yaml
runs/mlflow/222773775549711198/0a4f117ad0ab4ce894f707dab55fed22/params/: data  dropout  lr0  save_dir
runs/mlflow/222773775549711198/0a4f117ad0ab4ce894f707dab55fed22/tags/: mlflow.source.git.commit  mlflow.source.name
steps/: 01_generate_splits.py  02_train_model.py  03_log_model.py  04_promote_to_staging.py  05_validate_with_production.py
wandb/: latest-run
wandb/run-20251202_212319-ihcgouxf/: run-ihcgouxf.wandb
wandb/run-20251202_212319-ihcgouxf/files/: config.yaml  wandb-metadata.json  wandb-summary.json
wandb/run-20251202_212426-3v4gp29r/: run-3v4gp29r.wandb
wandb/run-20251202_212426-3v4gp29r/files/: config.yaml  requirements.txt  wandb-metadata.json  wandb-summary.json
